English Full Migration

--- a/proyectos/skeleton-tracking.html
+++ b/proyectos/skeleton-tracking.html
@@ -1,5 +1,5 @@
 <!--08/12/2020-->
-<!--Reutilización de las cámaras de profundidad de un kinect para hacer seguimiento de esqueletos y controlar cualquier dispositivo por medio de gestos.-->
+<!--Reuse of depth cameras from Kinect for skeleton tracking and gesture-based control of any device.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,18 +19,18 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/skeleton-tracking_profile.jpg">
-                        <p>Este es un proyecto muy interesante ya que reutiliza un kinect de un xbox 360 para usarlo como cámara de profundidad y poder emplearse como un método de interfaz de usuario en lugar de los métodos tradicionales.</p><br>
-                        <p>Como ejemplos de aplicación de este sensor creé un robot al estilo de un brazo con dos grados de libertad que replicaba el movimiento de uno de mis brazos usando cinemática directa y un segundo prototipo más complejo de un brazo inteligente que alcanzaba cualquier punto en el espacio de manera autónoma usando cinemática inversa.</p><br>
-                        <p>Además de mis proyectos hice una gran aportación a la comunidad ya que parecía que todos los recursos sobre este tema habían desaparecido hace más de 10 años y de alguna forma pude rescatarlos y compartir un <a href="https://youtu.be/9aNdWmKoTUM" target="_blank">video</a> sobre el proceso de instalación y la forma de comenzar a programar esta cámara de profundidad completamente gratis y en español lo que ha sido reconocido por muchos usuarios en el internet.</p><br>
-                        <p>De igual forma los dos proyectos que mencioné anteriormente fueron documentados y el proceso para replicarlos se encuentra en cada uno de los siguientes dos videos:</p>
+                        <p>This is a very interesting project as it repurposes a Kinect from an Xbox 360 to use it as a depth camera and employ it as a user interface method instead of traditional methods.</p><br>
+                        <p>As examples of application for this sensor, I created a robot in the style of an arm with two degrees of freedom that replicated the movement of one of my arms using forward kinematics. I also developed a more complex second prototype of an intelligent arm that could reach any point in space autonomously using inverse kinematics.</p><br>
+                        <p>In addition to my projects, I made a great contribution to the community as it seemed that all the resources on this topic had disappeared over 10 years ago. Somehow, I was able to retrieve them and share a <a href="https://youtu.be/9aNdWmKoTUM" target="_blank">video</a> about the installation process and how to start programming this depth camera, completely free and in Spanish. This has been recognized by many users on the internet.</p><br>
+                        <p>Similarly, the two projects I mentioned earlier were documented, and the process to replicate them can be found in each of the following two videos:</p>
                         <ul>
-                            <li><a href="https://youtu.be/Oh6WBOk57_8" target="_blank">Cinemática Directa.</a></li>
-                            <li><a href="https://youtu.be/8TaDrmI6Aas" target="_blank">Cinemática Inversa.</a></li>
+                            <li><a href="https://youtu.be/Oh6WBOk57_8" target="_blank">Direct kinematics.</a></li>
+                            <li><a href="https://youtu.be/8TaDrmI6Aas" target="_blank">Inverse kinematics.</a></li>
                         </ul>
-                        <p>De igual forma en el siguiente <a href="https://youtu.be/fQrLefnj2xo" target="_blank">video</a> muestro como es posible hacer una comunicación con arduino para usar señales provenientes de la cámara de profundidad para controlar dispositivos externos.</p>
+                        <p>Similarly, in the following <a href="https://youtu.be/fQrLefnj2xo" target="_blank">video</a>, I demonstrate how it is possible to establish communication with Arduino to use signals from the depth camera to control external devices.</p>
                         <img src="../images/skeleton-tracking_profile.jpg">
                     </div>
                 </div>
@@ -38,7 +38,7 @@
         </div>
         <div id="ejemplos"> 
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/skeleton-tracking_1.jpg">
