--- a/proyectos/solidworks.html
+++ b/proyectos/solidworks.html
@@ -1,5 +1,5 @@
 <!--26/03/2023-->
-<!--Todas las certificaciones de diseño 3D para Solidworks que tengo a la fecha.-->
+<!--All the 3D design certifications for Solidworks that I have to date.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Certificaciones SolidWorks</title>
+        <title>SolidWorks Certifications</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
