--- a/proyectos/stock-portfolio.html
+++ b/proyectos/stock-portfolio.html
@@ -1,5 +1,5 @@
 <!--29/06/2023-->
-<!--Servidor web corriendo en rpi4 para trackear el valor neto de mis inversiones actualizado diariamente.-->
+<!--A web server running on a Raspberry Pi 4 to track the net value of my investments updated daily.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Portafolio de Inversión</title>
+        <title>Stock Portfolio</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,12 +19,12 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/stock-portfolio_profile.jpg">
-                        <p>Mi nuevo proyecto consiste en una página web diseñada para visualizar diariamente el valor neto de mis inversiones. Esta plataforma se ejecuta en un servidor web alojado en una Raspberry Pi 4, brindándome una solución accesible y autónoma para monitorear mis inversiones en cualquier momento. Con esta página web, puedo obtener una visión clara y actualizada de mi cartera de inversiones en tiempo real. Utilizando la potencia de la Raspberry Pi 4, los datos financieros se recopilan, procesan y se presentan en una interfaz intuitiva y fácil de usar.</p><br>
-                        <p>Gracias a la naturaleza autónoma de la Raspberry Pi 4, puedo acceder a la página web desde cualquier dispositivo haciendo uso de un servicio para poner en una ip pública lo que redirige mi Raspberry por medio de ssh, lo que me brinda flexibilidad y comodidad para realizar un seguimiento continuo de mis inversiones, incluso cuando estoy fuera de casa.</p><br>
-                        <p>En adición la página cuenta con una sección de predicción dónde puedo establecer el porcentaje de inversiones que me gustaría ver en mi portafolio y automáticamente crea un plan con un portafolio de composición esperada y un apartado de siguientes inversiones que me dice de que manera debo distribuir el monto a invertir para formar el portafolio meta.</p>
+                        <p>My new project consists of a website designed to visualize the net value of my investments on a daily basis. This platform runs on a web server hosted on a Raspberry Pi 4, providing me with an accessible and autonomous solution to monitor my investments at any time. With this website, I can get a clear and up-to-date view of my investment portfolio in real-time. Leveraging the power of the Raspberry Pi 4, financial data is collected, processed, and presented in an intuitive and user-friendly interface.</p><br>
+                        <p>Thanks to the autonomous nature of the Raspberry Pi 4, I can access the website from any device by using a service to assign a public IP, which allows me to redirect my Raspberry Pi through SSH. This provides me with flexibility and convenience to continuously track my investments, even when I'm away from home.</p><br>
+                        <p>In addition, the website has a prediction section where I can set the desired percentage allocation for my investments. It automatically creates a plan with an expected composition portfolio and a section for upcoming investments, which tells me how to distribute the investment amount to achieve the target portfolio. This feature allows me to plan and optimize my investment strategy based on my desired allocation.</p>
                         <img src="../images/stock-portfolio_profile.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/stock-portfolio_1.jpg">
