--- a/proyectos/coffee-shop.html
+++ b/proyectos/coffee-shop.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez cnc maquinados madera cafetería">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez cnc maquinados madera coffee-shoptería">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
@@ -21,14 +21,14 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
-                        <img src="../images/cafe_profile.jpg">
+                        <img src="../images/coffee-shop_profile.jpg">
                         <p>As part of one of the services I offer, which is manufacturing, my partner and I received an order to machine the 3D logo and other aesthetic pieces for a café that was about to open its doors.</p><br><p>The project involved machining the coffee cup logo and the letters of the café's name, "AL GRANO," on 15mm thick wood. After machining, the pieces were painted and installed in the café's premises.</p><br><p>In addition to the main logo, we also machined extra elements to enhance the aesthetics. These elements included:</p> 
                         <ul>
                             <li>A second logo, made of thinner wood, specifically designed to be placed on the counter. This logo added an attractive branding element to the café's countertop, serving as a focal point for customers and enhancing the overall aesthetic appeal of the space.</li> 
                             <li>Hinged doors for a visible sink area that detracted from the overall cleanliness of the space. These doors were designed to cover and conceal the sink, providing a cleaner and more polished appearance to the area.</li>
                             <li>A painted board, designed to function as a chalkboard. This board could be used to write the menu or important daily information for customers. It added a functional and visually appealing element to the café's decoration, allowing for easy communication of updates and specials.</li>
                         </ul>
-                        <img src="../images/cafe_profile.jpg">
+                        <img src="../images/coffee-shop_profile.jpg">
                     </div>
                 </div>
             </div>
@@ -38,28 +38,28 @@
                 <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/cafe_1.jpg">
+                        <img src="../images/coffee-shop_1.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/cafe_2.jpg">
+                        <img src="../images/coffee-shop_2.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/cafe_3.jpg">
+                        <img src="../images/coffee-shop_3.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/cafe_4.jpg">
+                        <img src="../images/coffee-shop_4.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/cafe_5.jpg">
+                        <img src="../images/coffee-shop_5.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/cafe_6.jpg">
+                        <img src="../images/coffee-shop_6.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/cafe_7.jpg">
+                        <img src="../images/coffee-shop_7.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/cafe_8.jpg">
+                        <img src="../images/coffee-shop_8.jpg">
                     </div>
                 </div>    
             </div>
