--- a/proyectos/coffee-shop.html
+++ b/proyectos/coffee-shop.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Café</title>
+        <title>Coffee Shop</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
