--- a/proyectos/engineeringexpofj2023.html
+++ b/proyectos/engineeringexpofj2023.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Engineering Expo Feb-Jun 2023</title>
+        <title>Engineering Expo 06-2023</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
