--- a/proyectos/arduino-courses.html
+++ b/proyectos/arduino-courses.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez youtube arduino microcontroladores atmega 328p registros C bajo nivel">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Youtube Arduino Microcontrollers Atmega 328p Registers C Low Level">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
