--- a/proyectos/roc.html
+++ b/proyectos/roc.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez luces inalámbrico iot internet de las cosas contador de personas indonesia pandemia COVID control de espacios cerrados">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Lights Wireless IOT Internet of things People Counter Indonesia COVID">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
