--- a/proyectos/stock-portfolio.html
+++ b/proyectos/stock-portfolio.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez RaspberryPi Pi Raspberry Inversiones Portafolio Acciones Bolsa CETES Fibras Dinero">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Raspberry Pi Inverstments Portfolio Accions CETES Fibras Bolsa Dinero">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
