--- a/proyectos/competitive-programming.html
+++ b/proyectos/competitive-programming.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez programación competitiva python c++">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Competitive Programming Python C++">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
