--- a/proyectos/eggcnc.html
+++ b/proyectos/eggcnc.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez cnc impresión 3D huevos dibujos">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez CNC 3D Printing Eggbot Eggs Drawings">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
