--- a/proyectos/engineeringexpofj2023.html
+++ b/proyectos/engineeringexpofj2023.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez TEC ITESM Computación Tecnología Expo Ingeniería Ingenierías">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez TEC ITESM Computation Tecnology Expo Engineering">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
