--- a/proyectos/oci-2015.html
+++ b/proyectos/oci-2015.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez OCI olimpiada del conocimiento infantil 2015 enrique peña nieto">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez OCI Children's Knowledge Olympiad 2015 Enrique Peña Nieto">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
