--- a/proyectos/robociety.html
+++ b/proyectos/robociety.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez robociety robótica robots sumos mini sumos peleas de robots resolvedor de laberintos">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Robociety Robotics Robots Sumos Mini Sumos Robot Wars Maze Solver">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
