--- a/proyectos/robotic-hand.html
+++ b/proyectos/robotic-hand.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez mano robótica biónica servos arduino lenguaje de señas voz texto">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Robotic Hand Bionic Hand Servos Arduino Voice to Sign Language">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
