--- a/proyectos/rubiks-cube-solver.html
+++ b/proyectos/rubiks-cube-solver.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez resolvedor de cubos rubik LEGO proyecto robot robótica">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Rubiks Cube Solver LEGO Robotics Robot">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
