--- a/proyectos/stabilizer.html
+++ b/proyectos/stabilizer.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez DJI stabilizer impresión 3D equipo de video DIY youtube">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez DJI Stabilizer 3D Printing DIY YouTube">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
