--- a/proyectos/strange-robot.html
+++ b/proyectos/strange-robot.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez robot cuadrúpedo boston dynamics robótica arduino arte">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Robot Cuadruped Boston Dynamics Robotics Arduino Art">
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
