English mistakes fixed

--- a/proyectos/PLAN-foundation.html
+++ b/proyectos/PLAN-foundation.html
@@ -20,7 +20,7 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
-                    <div class="small-description">
+                    <div class="description">
                         <img src="../images/PLAN-foundation_profile.jpg">
                         <p>As part of my social service, I was involved with "Fundación PLAN," a non-profit organization that aims to help communities find solutions to their challenges using the most appropriate approach.</p><br>
                         <p>My role within the organization was to support in carrying out various activities. Some of the activities I participated in included donating clothes to homeless individuals, participating in reforestation efforts in green areas in Metepec, Mexico, creating fun videos for children in delicate situations in hospitals, and writing letters to elderly individuals in nursing homes to celebrate special occasions such as their birthdays or Grandparents Day.</p>
