--- a/proyectos/competitive-programming.html
+++ b/proyectos/competitive-programming.html
@@ -20,7 +20,7 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
-                    <div class="small-description">
+                    <div class="description">
                         <img src="../images/competitive-programming_profile.jpg">
                         <p>This project consisted of a series of online programming competitions with a team of three people (my great friends Maricarmen Barillas and Emiliano Pacheco). The theme of these competitions was very specific. They involved 5-hour sessions where multiple teams gathered at their respective universities and attempted to solve the same 11-13 problems without any assistance from professors, other teams, or the internet. While most of the problems can be solved with some level of experience, it is not enough. It is crucial to propose an efficient solution because each problem has a time limit.</p><br>
                         <p>It is important to note that in order to produce efficient solutions, teams must study extensively and learn about algorithms and data structures that reduce both programming time and the execution time of their solutions.</p>
