--- a/proyectos/first-2019-1.html
+++ b/proyectos/first-2019-1.html
@@ -20,7 +20,7 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
-                    <div class="small-description">
+                    <div class="description">
                         <img src="../images/first-2019-1_profile.jpg">
                         <p>This was the first robot I built for the FTC (FIRST Tech Challenge) robotics competition. The challenge that year was called "Rover Ruckus," and it involved retrieving objects from the ground, which could be balls or cubes, and placing them inside a spacecraft located in the center of the field at a height of at least twice the robot's original height.</p><br><p>This robot didn't have many advanced features as it was my first experience with many of the components, but within its limited capabilities, it had the following features:</p>
                         <ul>
@@ -37,7 +37,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2019-1_1.jpg">
