--- a/proyectos/library.html
+++ b/proyectos/library.html
@@ -21,9 +21,9 @@
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
-                        <img src="../images/biblioteca_profile.jpg">
+                        <img src="../images/library_profile.jpg">
                         <p>As part of one of the services I offer, which is manufacturing, my partner and I received an order to design a custom bookshelf for an unused room in a church located near our workshop.</p><br><p>The general idea was to select a wall and create a series of deep boxes where large books could be placed, and on the second wall, install shelves for smaller books.</p><br><p>For the drawers, the measurements of the wall were taken into account, and a design was chosen to organize them in a somewhat creative way while maintaining a structure of rows and columns. As for the shelves, wooden shelves were designed with a front stopper to hold the books in place and prevent them from falling.</p>
-                        <img src="../images/biblioteca_profile.jpg">
+                        <img src="../images/library_profile.jpg">
                     </div>
                 </div>
             </div>
@@ -33,22 +33,22 @@
                 <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/biblioteca_1.jpg">
+                        <img src="../images/library_1.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/biblioteca_2.jpg">
+                        <img src="../images/library_2.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/biblioteca_3.jpg">
+                        <img src="../images/library_3.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/biblioteca_4.jpg">
+                        <img src="../images/library_4.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/biblioteca_5.jpg">
+                        <img src="../images/library_5.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/biblioteca_6.jpg">
+                        <img src="../images/library_6.jpg">
                     </div>
                 </div>    
             </div>
