--- a/proyectos/first-national.html
+++ b/proyectos/first-national.html
@@ -20,7 +20,7 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
-                    <div class="small-description">
+                    <div class="description">
                         <img src="../images/first-national_profile.jpg">
                         <p>This project was born out of the need for TecMilenio University to train its high school students to build robots for the FRC robotics competition with a higher level of engineering than they are accustomed to. Therefore, the university's national directors contacted me to teach a course on competition-oriented mechanics. I conducted a series of 7 sessions covering a wide range of topics, from basic and general concepts of physics and materials to actuators and their application in various common mechanisms used in the competition.</p><br>
                         <p>The course took place through Zoom, with approximately 40 participants connected from campuses in Puebla, Monterrey, Querétaro, Toluca, and Mazatlán. However, to preserve the content, the classes were recorded and can be found on the following <a href="https://www.youtube.com/watch?v=VfE1Mfh0N9Y&list=PLpWHIyAPNvvxyWvrlZs0HlBJPx8Ttyin7" target="_blank">playlist</a>.</p>
