English Update Agosto

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="work"></div>
                     <div class="work"></div>
                 </div>
-                <a href="proyectos" class="btn">See more</a>     
+                <a href="projects" class="btn">See more</a>     
             </div>
         </div>
         <!-- Contacto -->
