--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <img src="./images/logo.png" class="logo">
                     <ul id="sidemenu">
                         <li><a href="#inicio" onclick="closemenu()">Home</a></li>
-                        <li><a href="#sobre_mi" onclick="closemenu()">About Me</a></li>
-                        <li><a href="#servicios" onclick="closemenu()">Services</a></li>
-                        <li><a href="#proyectos" onclick="closemenu()">Projects</a></li>
-                        <li><a href="#contacto" onclick="closemenu()">Contact Me</a></li>
+                        <li><a href="#about_me" onclick="closemenu()">About Me</a></li>
+                        <li><a href="#services" onclick="closemenu()">Services</a></li>
+                        <li><a href="#projects" onclick="closemenu()">Projects</a></li>
+                        <li><a href="#contact" onclick="closemenu()">Contact Me</a></li>
                         <i class="fas fa-times" onclick="closemenu()"></i>
                     </ul>
                     <i class="fas fa-bars" onclick="openmenu()"></i>
@@ -36,7 +36,7 @@
             </div>
         </div>
         <!-- Acerca de Mi -->
-        <div id="sobre_mi">
+        <div id="about_mi">
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
@@ -82,7 +82,7 @@
             </div>
         </div>
         <!-- Servicios -->
-        <div id="servicios">
+        <div id="services">
             <div class="container">
                 <h1 class="subtitle">My Services</h1>
                 <div class="services-list">
@@ -90,25 +90,25 @@
                         <i class="fa-solid fa-screwdriver-wrench"></i>
                         <h2>Part Manufacturing</h2>
                         <p align="justify">I can help bring any project to life by manufacturing any part using my CNC machines.</p>
-                        <a href="./servicios/manufactura">Learn More...</a>
+                        <a href="./services/manufacture">Learn More...</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-code"></i>
                         <h2>Automation</h2>
                         <p align="justify">I can assist you in automating processes in your company through the creation of customized programs that can reduce costs, such as inventory self-management, employee control, and more.</p>
-                        <a href="./servicios/automatizacion">Learn More...</a>
+                        <a href="./services/automation">Learn More...</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-microchip"></i>
                         <h2>Development of Electronic Devices</h2>
                         <p align="justify">I can help you invent any electronic device that can enhance your daily activities, such as occupancy counters for your business, remote-controlled toys, lights that connect to Alexa, or any other IoT device.</p>
-                        <a href="./servicios/desarrollo">Learn More...</a>
+                        <a href="./services/development">Learn More...</a>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Proyectos -->
-        <div id="proyectos">
+        <div id="projects">
             <div class="container">
                 <h1 class="subtitle">My Projects</h1>
                 <div class="work-list-main">
