--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="header-subpage">
-            <a href="https://paoloreyes.github.io/web/#proyectos"><i class="fa-solid fa-angles-left"></i></a>
+            <a href="https://paoloreyes.github.io/web/#projects"><i class="fa-solid fa-angles-left"></i></a>
             <h2>My Projects</h2>
             <span></span>
         </div>
