--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </div>
         </div>
         <!-- Acerca de Mi -->
-        <div id="about_mi">
-            <div class="container">
+        <div id="about_me">
+            <div class="container" style="margin-top: 8%;">
                 <div class="row">
                     <div class="about-col-1">
                         <img src="./images/paolo.JPG">
