--- a/projects/fourier-series.html
+++ b/projects/fourier-series.html
@@ -6,11 +6,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Python Manim Fourier Series Complex Exponentials">
+        <meta name="keywords" content="Paolo Alfonso Reyes Ramírez Autonomous Fourier Series Complex Exponential Manim Python">
         <meta name="author" content="Paolo Reyes">
-        <link rel="styleshezet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Complex Fourier Series Animation Script</title>
+        <title>Complex Fourier Series Script</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -20,7 +20,7 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
-                    <div class="small-description">
+                    <div class="description">
                         <img src="../images/fourier-series_profile.jpg">
                         <p>This project consists of a Python script that generates animations illustrating the convergence of Fourier series, serving as an educational tool and visual aid for understanding this hard to see mathematical concept in the complex plane.</p><br>
                         <p>Source code can be found in this <a href="https://github.com/PaoloReyes/Complex-Fourier-Series/tree/main" target="_blank">github repository.</a></p><br>
@@ -38,17 +38,17 @@
                         <video autoplay muted loop playsinline>
                             <source src="../images/fourier-series_1.mp4" type="video/mp4">
                         </video>
-                    </div> 
+                    </div>   
                     <div class="work">
                         <video autoplay muted loop playsinline>
                             <source src="../images/fourier-series_2.mp4" type="video/mp4">
                         </video>
-                    </div>
+                    </div>   
                     <div class="work">
                         <video autoplay muted loop playsinline>
                             <source src="../images/fourier-series_3.mp4" type="video/mp4">
                         </video>
-                    </div>  
+                    </div>   
                 </div>    
             </div>
         </div>
