--- a/projects/wheelchair.html
+++ b/projects/wheelchair.html
@@ -20,7 +20,7 @@
             <div class="container-subpage">
                 <div class="first-section-subpage">
                     <h1 class="subtitle">What is it about?</h1>
-                    <div class="small-description">
+                    <div class="description">
                         <img src="../images/wheelchair_profile.jpg">
                         <p>This project originated from a task during my third semester of high school, where a group of friends and I were tasked with developing a prototype that addressed a specific problem. In collaboration with my robotics team, we came up with the idea of creating an electric wheelchair in which each wheel was powered by a motor. The speed and direction of the wheelchair were controlled by the tilting motion of an accelerometer placed in a headband worn by the user. The accelerometer data was interpreted by an Arduino Uno, making it easy for the user to navigate through space.</p><br>
                         <p>This project received a lot of recognition both within and outside the institution, and related news articles can be found at the following links:</p>
