--- a/projects/fourier-series.html
+++ b/projects/fourier-series.html
@@ -24,7 +24,7 @@
                         <img src="../images/fourier-series_profile.jpg">
                         <p>This project consists of a Python script that generates animations illustrating the convergence of Fourier series, serving as an educational tool and visual aid for understanding this hard to see mathematical concept in the complex plane.</p><br>
                         <p>Source code can be found in this <a href="https://github.com/PaoloReyes/Complex-Fourier-Series/tree/main" target="_blank">github repository.</a></p><br>
-                        <p>The code can also be modified to produce function approximations with only real numbers which probably is a more useful tool.</p>
+                        <p>The code can also be modified to produce function approximations with only real numbers which is probably a more useful tool.</p>
                         <img src="../images/fourier-series_profile.jpg">
                     </div>
                 </div>
